Fix spacing on WERKStad page

--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -60,7 +60,7 @@ h2 {
 
 .project-page-section {
   @include default-margin();
-  margin-top: 4rem;
+  margin-top: 11rem;
 
   line-height: 1.5;
 
@@ -90,7 +90,8 @@ h2 {
     p,
     h3,
     figure,
-    li {
+    li,
+    table {
       width: 500px;
     }
   }
@@ -102,6 +103,7 @@ h2 {
   @media only screen and (min-width: $break-desktop) {
     max-width: 1000px;
     margin: 0 auto;
+    margin-top: 135px;
   }
 }
 
@@ -115,7 +117,6 @@ h2 {
 
   p {
     margin-top: 1.7rem;
-    line-height: 1.5;
     @include default-margin();
 
     @media only screen and (min-width: $break-desktop) {
@@ -136,7 +137,7 @@ h2 {
     }
 
     @media only screen and (min-width: $break-desktop) {
-      margin: 0;
+      margin: 1.7rem 0 0;
     }
   }
 
@@ -214,6 +215,10 @@ h2 {
   width: 0;
   height: 0;
   border-top: 50px solid $orange;
-  border-left: 50vw solid transparent; /* check border size here! */
-  border-right: 50vw solid transparent; /* and here! */
+  border-left: 50vw solid transparent;
+  border-right: 50vw solid transparent;
+
+  @media only screen and (min-width: $break-desktop) {
+    margin-bottom: 100px;
+  }
 }
