--- a/sass/components/_text.scss
+++ b/sass/components/_text.scss
@@ -1,3 +1,7 @@
+* {
+  font-family: $secondary-font;
+}
+
 h1,
 h2 {
   font-family: $primary-font;
@@ -48,12 +52,16 @@ strong {
   h1 {
     margin-top: 3px;
   }
+
+  @media only screen and (min-width: $break-small-tablet) {
+    margin-right: 50px;
+  }
 }
 
 p,
 span {
   font-family: $secondary-font;
-  line-height: 1.3;
+  line-height: 1.7;
 }
 
 .blob-text {
